[gd_scene load_steps=13 format=3 uid="uid://b6s8261mrng3s"]

[ext_resource type="Script" path="res://scenes/Ui/arena_timer_ui.gd" id="1_ut0fg"]
[ext_resource type="Script" path="res://scenes/Ui/player_health_bar.gd" id="2_spcjt"]
[ext_resource type="Script" path="res://scenes/Ui/ability_power_bar.gd" id="3_imxhw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lgeja"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_34i0s"]
bg_color = Color(0.25098, 0.14902, 0.188235, 1)
expand_margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mj0jd"]
bg_color = Color(0.141176, 0.588235, 0.411765, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.25098, 0.14902, 0.188235, 1)
expand_margin_bottom = 15.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eragc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wqrif"]
bg_color = Color(0.25098, 0.14902, 0.188235, 1)
corner_detail = 3
expand_margin_bottom = 6.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yuy8n"]
bg_color = Color(0.639216, 0.360784, 0.835294, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.25098, 0.14902, 0.188235, 1)
corner_detail = 6
expand_margin_bottom = 6.0

[sub_resource type="Animation" id="Animation_oq6j6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 44)]
}

[sub_resource type="Animation" id="Animation_7121x"]
resource_name = "shake"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 44)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vccxm"]
_data = {
"RESET": SubResource("Animation_oq6j6"),
"shake": SubResource("Animation_7121x")
}

[node name="ArenaTimerUi" type="CanvasLayer"]
script = ExtResource("1_ut0fg")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 20

[node name="PlayerHealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer3"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_lgeja")
custom_minimum_size = Vector2(32, 8)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_34i0s")
theme_override_styles/fill = SubResource("StyleBoxFlat_mj0jd")
max_value = 1.0
value = 0.5
show_percentage = false
script = ExtResource("2_spcjt")
color1 = Color(0.909804, 0.270588, 0.211765, 1)
color2 = Color(0.716647, 0.176157, 0.131945, 1)

[node name="Timer" type="Timer" parent="MarginContainer/VBoxContainer3/PlayerHealthBar"]
wait_time = 0.2
autostart = true

[node name="PlayerHealthDisplay" type="Label" parent="MarginContainer/VBoxContainer3/PlayerHealthBar"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 71.0
offset_top = 4.0
offset_right = 98.0
offset_bottom = 20.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 15
text = "0/1"

[node name="AbilityPowerBar" type="ProgressBar" parent="MarginContainer/VBoxContainer3"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_eragc")
custom_minimum_size = Vector2(32, 8)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_wqrif")
theme_override_styles/fill = SubResource("StyleBoxFlat_yuy8n")
max_value = 1.0
value = 1.0
show_percentage = false
script = ExtResource("3_imxhw")

[node name="AbilityVisualCooldownTimer" type="Timer" parent="MarginContainer/VBoxContainer3/AbilityPowerBar"]
unique_name_in_owner = true
one_shot = true

[node name="AbilityVisualDurationTimer" type="Timer" parent="MarginContainer/VBoxContainer3/AbilityPowerBar"]
unique_name_in_owner = true
one_shot = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer3"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer3/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/text_highlight_v_padding = 6
theme_override_constants/outline_size = 16
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[color=green]C[/color][color=blue]o[/color][color=red]m[/color][color=purple]b[/color][color=white]o[/color]"
fit_content = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TimeLeft" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 8
horizontal_alignment = 1

[node name="AnnouncementLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 11
theme_override_font_sizes/font_size = 20
text = "ONE_MINUTE_REMAINING_LABEL"
horizontal_alignment = 1

[node name="BossHealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_lgeja")
custom_minimum_size = Vector2(32, 8)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_34i0s")
theme_override_styles/fill = SubResource("StyleBoxFlat_mj0jd")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/VBoxContainer/BossHealthBar"]
libraries = {
"": SubResource("AnimationLibrary_vccxm")
}

[node name="BossHealthDisplay" type="Label" parent="MarginContainer/VBoxContainer/BossHealthBar"]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = 71.0
offset_top = 4.0
offset_right = 98.0
offset_bottom = 20.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 15
text = "AAAAA"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
alignment = 2

[node name="DamageScore" type="Label" parent="MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 8
text = "0"
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
